objects/User.object
<CustomObject>
    <fields>
        <fullName>Access_Type__c</fullName>
        <description>Access Type - defines control for user access &amp; provisioning to Salesforce-SFDC</description>
        <inlineHelpText>Access Type - defines control for user access &amp; provisioning to Salesforce-SFDC</inlineHelpText>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont</fullName>
                </value>
                <value>
                    <fullName>DuPont-2</fullName>
                    <default>true</default>
                    <label>DuPont-2</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Inherited</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Static</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <description>Used to identify the &quot;role&quot; of the person who is in the Manager field for this user - as used in the Approval Workflow process. The values in this field are used when you build the Approval process entry criteria.</description>
        <label>Approver Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>District Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Market Sales Manager</fullName>
                </value>
                <value>
                    <fullName>National Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Zone Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approving_Business__c</fullName>
        <description>Track the business that should approve this user during the Annual User Review process.</description>
        <label>Approving Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building Innovations-PA</fullName>
                </value>
                <value>
                    <fullName>Corporate - COB-Credit-PA</fullName>
                </value>
                <value>
                    <fullName>Corporate - CS-PA</fullName>
                </value>
                <value>
                    <fullName>Corporate - IT-PA</fullName>
                </value>
                <value>
                    <fullName>Crop Protection-PA</fullName>
                </value>
                <value>
                    <fullName>Electronics &amp; Communications-PA</fullName>
                </value>
                <value>
                    <fullName>Industrial Biosciences-PA</fullName>
                </value>
                <value>
                    <fullName>Nutrition &amp; Health-PA</fullName>
                </value>
                <value>
                    <fullName>Packaging &amp; Industrial Polymers-PA</fullName>
                </value>
                <value>
                    <fullName>Performance Polymers-PA</fullName>
                </value>
                <value>
                    <fullName>Protection Technologies-PA</fullName>
                </value>
                <value>
                    <fullName>Advanced Solutions - PA</fullName>
                </value>
                <value>
                    <fullName>Multibase - PA</fullName>
                </value>
                <value>
                    <fullName>Aramids</fullName>
                    <isActive>false</isActive>
                    <label>Aramids</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Asset Grantor comments regarding this user</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Describes special user or access information</description>
        <label>Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DuPont_Responsible_Contact__c</fullName>
        <description>Name of the DuPont employee responsible for external user or partner</description>
        <label>DuPont Responsible Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Pass_ID__c</fullName>
        <description>Positive identification of individuals accessing DuPont computer systems - found in MyAccess &amp; in the User&apos;s NAB Entry</description>
        <label>E-Pass ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont Employee</fullName>
                </value>
                <value>
                    <fullName>Non-Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>SAP Partner Code / User ID (sales rep, CSR, etc.) of this user and is the unique record identifier for this person from SAP.</description>
        <externalId>true</externalId>
        <inlineHelpText>SAP Partner Code / User ID (sales rep, CSR, etc.) of this user and is the unique record identifier for this person from SAP.</inlineHelpText>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key_User_Lookup__c</fullName>
        <description>The Business Key User responsible for this user</description>
        <label>Key User Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Key_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <relationshipName>Key_User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Key_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Identify the SFDC Key Users - Used in criteria for the Key User Look-up on other objects</description>
        <label>Key User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_S_Business_IT_Lead__c</fullName>
        <description>The Marketing &amp; Sales IT responsible for this user&apos;s Business.</description>
        <label>M&amp;S Business IT Lead</label>
        <relationshipName>M_S_Business_IT_Lead</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>MyAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, SFDC is an approved asset for this user (as per MyAcess)</description>
        <inlineHelpText>If checked, SFDC is an approved asset for this user</inlineHelpText>
        <label>MyAccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_SFDC__c</fullName>
        <description>CRM Org from which this user federates to SpecCo Utility via SFDC SSO</description>
        <label>Other SFDC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EC CRM</fullName>
                </value>
                <value>
                    <fullName>IB CRM</fullName>
                </value>
                <value>
                    <fullName>MS CRM</fullName>
                </value>
                <value>
                    <fullName>PS CRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_Office_End_Date__c</fullName>
        <label>Out of Office End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Out_of_Office_Start_Date__c</fullName>
        <label>Out of Office Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Out_of_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P80_External_ERP_ID__c</fullName>
        <externalId>true</externalId>
        <label>P80 External ERP ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PrivacyAgreementDate__c</fullName>
        <description>Date to indicate acceptance of privacy policy</description>
        <inlineHelpText>Date to indicate acceptance of privacy policy</inlineHelpText>
        <label>Privacy Agreement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Procuring_Business__c</fullName>
        <description>Name of Business Procuring the License for the user</description>
        <inlineHelpText>Business sponsored the license</inlineHelpText>
        <label>Procuring Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Procuring_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>This is the Salesforce.com program that the end user is associated with. It is used for reporting, etc.</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adhesives &amp; Fluids</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-AP</fullName>
                </value>
                <value>
                    <fullName>BI-EU</fullName>
                </value>
                <value>
                    <fullName>BI-LA</fullName>
                </value>
                <value>
                    <fullName>BI-NA</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF-AP</fullName>
                </value>
                <value>
                    <fullName>DCF-EMEA</fullName>
                </value>
                <value>
                    <fullName>DCF-LA</fullName>
                </value>
                <value>
                    <fullName>DCF-NA</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>DEC-APT</fullName>
                </value>
                <value>
                    <fullName>DEC-AUTH</fullName>
                </value>
                <value>
                    <fullName>DEC-CMPT</fullName>
                </value>
                <value>
                    <fullName>DEC-CPM</fullName>
                </value>
                <value>
                    <fullName>DEC-DM</fullName>
                </value>
                <value>
                    <fullName>DEC-HLTH</fullName>
                </value>
                <value>
                    <fullName>DEC-ICS</fullName>
                </value>
                <value>
                    <fullName>DEC-LED Silicones</fullName>
                </value>
                <value>
                    <fullName>DEC-Litho</fullName>
                </value>
                <value>
                    <fullName>DEC-MCM</fullName>
                </value>
                <value>
                    <fullName>DEC-OLED</fullName>
                </value>
                <value>
                    <fullName>DEC-PG</fullName>
                </value>
                <value>
                    <fullName>DEC-PVFM</fullName>
                </value>
                <value>
                    <fullName>DEC-Semi Silicones</fullName>
                </value>
                <value>
                    <fullName>DEC-SL</fullName>
                </value>
                <value>
                    <fullName>DEI-ACST</fullName>
                </value>
                <value>
                    <fullName>DPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserOwningSBUOrg__c</fullName>
        <description>Business responsible for this User</description>
        <label>User Owning SBU Org</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Area_ID__c</fullName>
        <description>Unique user identification number used for integration with other systems</description>
        <label>User Area ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <description>Primary country this User belongs to</description>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Owning_Org__c</fullName>
        <description>Primary &quot;Owning Organisation&quot; this user belongs to</description>
        <label>User Owning Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>DPP</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>DTT</fullName>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LEGL</fullName>
                </value>
                <value>
                    <fullName>M&amp;S</fullName>
                </value>
                <value>
                    <fullName>M&amp;S-IT</fullName>
                </value>
                <value>
                    <fullName>N&amp;H</fullName>
                </value>
                <value>
                    <fullName>P&amp;IP</fullName>
                </value>
                <value>
                    <fullName>PNR</fullName>
                </value>
                <value>
                    <fullName>Adhesives &amp; Fluids</fullName>
                </value>
                <value>
                    <fullName>Multibase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <label>User Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>User Grouping identifies annual user allocation by owning business - DuPont Administration use only</description>
        <label>User Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>DPM</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>N&amp;H</fullName>
                </value>
                <value>
                    <fullName>PHI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LOCALE</columns>
        <columns>User_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Frozen_Users_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Program__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Frozen Users - Active</label>
        <sharedTo>
            <group>SFDC_ERP_Key_Users</group>
            <role>DuPontCorporate797661</role>
            <role>DuPontFullyOwned797661</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Frozen_Users_InActive</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Program__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Frozen Users - InActive</label>
        <sharedTo>
            <group>SFDC_ERP_Key_Users</group>
            <role>DuPontCorporate797661</role>
            <role>DuPontFullyOwned797661</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Integration_Users_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Access_Type__c</field>
            <operation>equals</operation>
            <value>Integrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Integration Users - Active</label>
        <sharedTo>
            <group>SFDC_Access_Approvers_CORP_IT_PA</group>
            <group>SFDC_Users_with_System_Admin_Access</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Federation_ID_can_not_be_blank</fullName>
        <active>false</active>
        <description>Federation ID is required for SSO, therefore it should not be blank</description>
        <errorConditionFormula>FederationIdentifier  = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>FederationIdentifier</errorDisplayField>
        <errorMessage>Federation ID must not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_Approvers_should_have_only_DuPont</fullName>
        <active>false</active>
        <description>Price Approvers should have only DuPont Email Address</description>
        <errorConditionFormula>AND(NOT(CONTAINS(Email,&apos;dupont.com&apos;)), CONTAINS( Profile.Name, &apos;Price Approval-Viewer&apos;))</errorConditionFormula>
        <errorMessage>Price Approvers should have only DuPont Email Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Procuring_Business_Required</fullName>
        <active>false</active>
        <description>The field procuring business is mandatory on user object. If the record is manually created or modified, this field cannot be blank.</description>
        <errorConditionFormula>AND(ISPICKVAL(Procuring_Business__c, &apos;&apos;),IsActive = True)</errorConditionFormula>
        <errorMessage>Procuring Business Cannot Be Blank.</errorMessage>
    </validationRules>
</CustomObject>